<?xml version="1.0" encoding="utf-8"?>
<resources>
     <string name="search_label">Dictionary</string>
    <string name="search_hint">Search the dictionary</string>	
<string name="search_description">test search suggestion</string>	
	<string name="app_name">ISmarTV</string>
	<string name="vod_player_buffering">Buffering...</string>
	<string name="vod_home_app_store">App Store</string>
	<string name="vod_home_my_app">My Apps</string>
	<string name="vod_home_local_video">VOD</string>
	<string name="vod_home_local_play">TV</string>
	<string name="vod_home_settings">Setting</string>
	<string name="vod_itemdexpense">Free</string>
   	<string name="vod_itemdescription">Synopsis:</string>
   	<string name="vod_itemplay">Play</string>
   	<string name="vod_itemepisode">Episode</string>
   	<string name="vod_itembookmark">Bookmark&#160;&#160;&#160;&#160;</string>
   	<string name="vod_itemremovebookmark">Cancel bookmark&#160;&#160;&#160;&#160;</string>
   	<string name="vod_itemratingaverage">Rating average&#160;&#160;&#160;&#160;</string>
   	<string name="vod_itemratingaverage_">Rating average  :    </string>
   	<string name="vod_itemrelatetitle">Related recommend</string>
   	<string name="vod_itemtextnone">Not available</string>
	<string name="vod_player_quality_setting">Video quality</string>
	<string name="vod_player_bookmark_setting">Bookmark</string>
	<string name="vod_player_remove_bookmark_setting">Remove bookmark</string>
	<string name="vod_player_related_setting">Related video</string>
	<string name="vod_player_continue_setting">Breakpoint continue</string>
	<string name="vod_player_continue_on">On</string>
	<string name="vod_player_continue_off">Off</string>	
	<string name="vod_player_quality_adaptive">Adaptive</string>
	<string name="vod_player_quality_low">Low</string>
	<string name="vod_player_quality_medium">Medium</string>
	<string name="vod_player_quality_normal">Normal</string>
	<string name="vod_player_quality_high">High</string>
	<string name="vod_player_quality_ultra">Ultra</string>
	<string name="vod_player_episode">episode</string>
	<string name="vod_player_exit_dialog">Confirm exit play?</string>
	<string name="vod_player_error_dialog">Confirm replay?</string>
	<string name="vod_player_prefixepisode">num</string> 
	<string name="vod_player_postfixepisode">episode</string> 	
	<string name="vod_player_tip">More</string> 
	<string name="vod_itemloading">Loading...</string>
	<string name="vod_Logining">Logging...</string>
	<string name="vod_movielist_title_history">History</string> 
	<string name="vod_movielist_today">Today</string> 
	<string name="vod_movielist_yesterday">Yesterday</string>
	<string name="vod_movielist_recent">Recent</string> 
	<string name="vod_episode_count">episode all</string>  
	<string name="vod_episode">episode</string>
	<string name="vod_playerfinish_replay">replay</string>
	<string name="vod_net_broken_error">Disconnected from the internet. Please check your cable.</string>
	<string name="vod_get_data_error">Cannot get data from the server. Please retry later.</string>
	<string name="vod_i_know">I know</string>
	<string name="vod_retry">Retry</string>
	<string name="vod_ok">OK</string>
	<string name="vod_cancel">Cancel</string>
	<string name="vod_relate_empty">No related video in this category</string>
	<string name="vod_relate_tip">Relate videos</string>
	<string name="vod_favor_tip">Favor Videos</string>
	<string name="vod_history_clear">Clear all histroy records</string>
	<string name="vod_history_clear_dialog">Confirm clear all histroy records?</string>
	<string name="vod_history_clear_one">Clear one records</string>
	<string name="vod_history_empty">No History</string>
	<string name="vod_myapp_more_icon_title">more...</string>
	<string name="vod_rate">Confirm commit</string>
	<string name="vod_volume">Volume</string>
	<string name="vod_volume_mute">Speaker muted</string>
	<string name="vod_login_prefix">Please</string>
	<string name="vod_login">Login</string>
	<string name="vod_login_postfix"> account</string>
	<string name="vod_login_prompt">Follow-up operation requires you to login to your  account, please login.</string>
	<string name="vod_login_userprompt">Your  account</string>
	<string name="vod_login_usererror">You enter the account does not exist</string>
	<string name="vod_login_passwordprompt"> account password</string>
	<string name="vod_login_passworderror">Retrieve password</string>	
	<string name="vod_register">Register</string>	
	<string name="vod_loading">Loading</string>
	<string name="vod_movielist_title_bookmark">bookmark</string> 
	<string name="vod_bookmark_clear">Clear bookmark records</string>
	<string name="vod_bookmark_clear_dialog">Confirm clear bookmark records?</string>
	<string name="vod_bookmark_remove_bookmark_setting">cancel bookmark</string>
	<string name="vod_bookmark_empty">No Bookmark</string>		
	<string name="vod_bookmark_add_success">Bookmark success</string>
	<string name="vod_bookmark_add_unsuccess">Bookmark unsuccess</string>
	<string name="vod_bookmark_remove_success">Unbookmark success</string>
	<string name="vod_bookmark_remove_unsuccess">Unbookmark unsuccess</string>		
	<string name="vod_ratingaverage_success">Ratingaverage success</string>
	<string name="vod_ratingaverage_unsuccess">Ratingaverage unsuccess</string>	
	<string name="account_name_format_error" >User name format errors, please enter the mailbox or phone number</string>
    <string name="account_password_error" >Password is incorrect</string>
    <string name="account_name_not_exist" >User name does not exist</string>
    <string name="account_name_not_active" >User name is not active</string>
    <string name="account_name_disable" >The user name has been disabled</string>
    <string name="account_name_locked" >The user name has been locked</string>
    <string name="account_connect_error" >Network connection error</string>
    <string name="account_proxy_authorization" >Proxy authorization is required</string>
    <string name="account_proxy_refused" >Agent denied request</string>
	<string name="area">area</string>
	<string name="genre">genre</string>
	<string name="vod_login_success">login is successful</string>
	<string name="vod_login_failed">login is failed</string>
	<string name="vod_menu_title">Menu</string>
		<string name="vod_detailplay">watch</string>	
		<string name="authorization_fail" >No authorization</string>
		<string name="setting_password">please input setting password</string>
</resources>
