<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"	
	>	
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:id="@+id/PopupLoginLayout" 
	android:layout_width="700px"
	android:layout_height="350px"
	android:layout_centerInParent="true"
	android:foreground="@android:color/transparent"
	android:background="@drawable/vod_popuplogin_bg"
	android:paddingTop="0px"
	android:paddingBottom="0px"
	android:paddingLeft="0px"
	android:paddingRight="0px"
	>
	
	<LinearLayout
		android:id="@+id/title"
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="60px"
		android:layout_marginTop="40px"
		android:layout_marginBottom="20px"
		android:layout_marginLeft="81px"	
	>	
		<TextView
			android:id="@+id/PopupLoginText1" 
			android:layout_width="wrap_content" 
			android:layout_height="fill_parent"
			android:gravity="center"
			android:textSize="40px"
			android:text="@string/setting_password"
			android:textColor="@color/vod_login_title"
		/>
		
	</LinearLayout>	
	
    <EditText
   		android:id="@+id/settingPasswordEdit" 
   		android:layout_width="500px" 
   		android:layout_height="64px"
   		android:layout_marginLeft="81px"
		android:paddingLeft="7px"
   		android:textSize="35px"   
   		android:inputType="textPassword"
   		android:textColor="@color/vod_loginpopup_dlg_focus"	
   		android:background="@drawable/vod_popuplogin_edit"
		android:layout_below="@id/title"
    />	
	
	<TextView
		android:id="@+id/settingPasswordError" 
		android:layout_width="120px" 
		android:layout_height="35px"
		android:gravity="center"
		android:textSize="25px"
		android:visibility="invisible"
		android:text="@string/account_password_error"
		android:layout_marginTop="25px"
		android:layout_marginLeft="81px"  
		android:textColor="@color/vod_loginpopup_dlg_error" 		
		android:layout_below="@id/settingPasswordEdit"	
	/>			
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="700px"
		android:layout_height="80px"
		android:layout_centerInParent="true"
		android:gravity="center"
		android:foreground="@android:color/transparent"
		android:background="@android:color/transparent"
		android:layout_marginTop="10px"
		android:layout_marginLeft="22px"
		android:layout_below="@id/settingPasswordError"		
	>
		<Button android:id="@+id/LeftButton"
			android:layout_width="200px"
			android:layout_height="53px"
			android:layout_marginLeft="93px"
			android:textSize="30px"
			android:background="@drawable/vod_popuplogin_left"
			android:text="@string/vod_ok"
			android:gravity="center"
			android:textColor="@drawable/textcolor"
			/>

		<Button android:id="@+id/RightButton"
			android:layout_width="200px"
			android:layout_height="53px"
			android:textSize="30px"
			android:layout_marginLeft="104px"
			android:background="@drawable/vod_popuplogin_left" 
			android:text="@string/vod_cancel"
			android:gravity="center"
			android:textColor="@drawable/textcolor"
			/>
	</LinearLayout>
</RelativeLayout>
</LinearLayout>
