<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/rootView"
    android:background="@drawable/vodbg">
   	<TextView
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_y="65dp"
			android:layout_x="65dp"
   			android:gravity="left"
			android:textColor="#B4F0F0F0"
			android:textSize="72sp"
			android:text="@string/vod_movielist_title_history"
			android:includeFontPadding="false"
	/>
     <AbsoluteLayout
        android:layout_width="1435dp"
    	android:layout_height="724dp"
    	android:layout_x="241dp"
    	android:layout_y="194dp"
    	android:background="@drawable/vod_empty_bg"
    	android:orientation="vertical"
    	> 	
	   	<TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_x="54dp"
				android:layout_y="41dp"
	   			android:gravity="left"
				android:textColor="#7E7F93"
				android:textSize="72sp"
				android:text="@string/vod_history_empty"
				android:includeFontPadding="false"
		/>
	   	<TextView
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_x="54dp"
				android:layout_y="164dp"
	   			android:gravity="left"
				android:textColor="#7E7F93"
				android:textSize="30sp"
				android:text="@string/vod_relate_tip"
				android:includeFontPadding="false"
		/>
	   	<ImageView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_x="1019dp" 
				android:layout_y="66dp"
				android:src="@drawable/vod_history"/>
        <LinearLayout
            android:id="@+id/itemlist"            
            android:layout_x="47dp"
            android:layout_y="402dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>     
 	</AbsoluteLayout> 	 
</AbsoluteLayout>