<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RootRelativeLayout"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@android:color/transparent"
	android:foreground="@android:color/transparent"
	>
	<VideoView
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:id="@+id/VideoView">
	</VideoView>
	
	<RelativeLayout
		android:layout_width="match_parent" 
		android:layout_height="match_parent"
		android:background="@android:color/transparent"
		android:foreground="@android:color/transparent"
		android:layout_centerInParent="true" >
	
		<RelativeLayout
		    android:id="@+id/BufferLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:foreground="@android:color/transparent"
			android:layout_centerInParent="true"
		>
			<ImageView
				android:id="@+id/BufferBGImage"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:src="@drawable/toast_bg"
				android:layout_centerInParent="true"
			/>
			
			
			<LinearLayout
				android:orientation="horizontal"
				android:id="@+id/BufferLinearLayout" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:gravity="center"
				android:foreground="@android:color/transparent"
				android:background="@android:color/transparent">
				
			    <TextView 
			    android:id="@+id/buff_precent"
			    android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textSize="30dp"
			    />
			    
				<ImageView
				    android:layout_marginLeft="5dp"
					android:id="@+id/BufferImage"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:background="@anim/loading"
					android:layout_centerInParent="true"
				/>
				<TextView
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/vod_player_buffering"
					android:gravity="center"
					android:textSize="30px"
				/>
			</LinearLayout>
		</RelativeLayout>
		<LinearLayout
			android:orientation="vertical"
			android:id="@+id/PanelLayout" 
			android:layout_width="fill_parent"
			android:layout_height="274dp"
			android:layout_alignParentBottom="true"
			android:background="@drawable/vod_player_panel_bg">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="87dp"
			>
				<TextView
					android:id="@+id/HDText"
					android:layout_width="100dip"
					android:layout_height="35dp"
					android:textSize="30sp"
					android:layout_marginLeft="91dp"
					android:layout_marginTop="25dp"
					android:textColor="@android:color/black"
					android:gravity="center"
					android:text="@string/vod_player_quality_high"
					android:includeFontPadding="false"
				/>
				<TextView
					android:id="@+id/TitleText"
					android:layout_width="1231dp"
					android:layout_height="48dp"
					android:textSize="40sp"
					android:layout_marginLeft="53dp"
					android:layout_marginTop="26dp"
					android:textColor="#f0f0f0"
					android:gravity="center_horizontal"
					android:includeFontPadding="false"
					android:singleLine="true"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"

				/>
				<TextView
					android:id="@+id/TimeText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="30sp"
					android:layout_marginLeft="84dp"
					android:layout_marginTop="37dp"
					android:textColor="#3fa5e7"
					android:gravity="right"
					android:includeFontPadding="false"
				/>
				<TextView
					android:id="@+id/TotalTimeText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="30sp"
					android:layout_marginTop="37dp"
					android:textColor="#f0f0f0"
					android:gravity="left"
					android:includeFontPadding="false"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"	
				android:layout_width="fill_parent"
				android:layout_height="88dp"
			>
				<ImageView android:id="@+id/PlayPauseImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="91dp"
					android:src="@drawable/vod_player_pause"/>
				<ImageView android:id="@+id/FBImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:src="@drawable/vod_player_fb"/>
				<SeekBar android:id="@+id/TimeSeekBar"
					android:layout_width="1478dp"
					android:layout_height="wrap_content"
					android:max="100"
					android:focusable="false"
					android:progressDrawable="@drawable/vod_player_time_prog"
					android:thumb="@android:color/transparent"
					android:thumbOffset="0dp" 
					android:layout_marginLeft="5dp"
					android:layout_marginTop="39dp"
					android:maxHeight="6dp"  
           			android:minHeight="6dp" 
					/>
				<ImageView android:id="@+id/FFImage"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="72dp"
					android:src="@drawable/vod_player_ff_focus"/>
			</LinearLayout>
			<FrameLayout 
			    android:layout_width="fill_parent"
				android:layout_height="100dp">
			<LinearLayout
				android:orientation="horizontal"	
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:foreground="#8000ff00"
			>
				<ImageView 
				    android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:src="@drawable/vod_player_tip"
					android:layout_marginLeft="1650dp"
					android:layout_marginTop="6dp"
				/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="20sp"
					android:layout_marginTop="6dp"
					android:layout_marginLeft="15dp"
					android:textColor="#474D6B"
					android:text="@string/vod_player_tip"
					android:includeFontPadding="false"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"	
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:background="#80000000"
			/>
			</FrameLayout>
		</LinearLayout>
		<RelativeLayout
			android:id="@+id/successlayout"
			android:orientation="vertical"	
			android:layout_width="1920px"
			android:layout_height="267px"
			android:layout_alignParentBottom="true"
			android:gravity="center"
			android:background="@drawable/ratingbarmenubg"
			android:visibility="gone"
			>	
			<TextView
				android:id="@+id/PopupRateText" 
				android:layout_width="1920px" 
				android:layout_height="75px"				
				android:layout_centerInParent="true"
				android:gravity="center"
				android:textSize="50px"
				android:textColor="@color/vod_ratepopup_dlg"
			/>
		</RelativeLayout>
	</RelativeLayout>

</RelativeLayout>
